// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with data updates variable and formula 1`] = `
{
  "decimal": [
    "1",
  ],
  "formula": [
    "b / 100",
  ],
  "function": [
    {
      "label": "COUNT",
      "value": "COUNT",
    },
  ],
  "jql": [
    "created >= -7d",
  ],
  "label": [
    "weekly issues",
  ],
  "prefix": [
    "~",
  ],
  "suffix": [
    "*",
  ],
  "variable": [
    "b",
  ],
}
`;

exports[`without data adds variable and formula 1`] = `
{
  "decimal": [
    "2",
  ],
  "formula": [
    "a / 100",
  ],
  "function": [
    {
      "label": "COUNT",
      "value": "COUNT",
    },
  ],
  "jql": [
    "created >= -30d",
  ],
  "label": [
    "monthly issues",
  ],
  "prefix": [
    "#",
  ],
  "suffix": [
    "%",
  ],
  "variable": [
    "a",
  ],
}
`;
